ess corrections + enterprise dataset replica

--- a/comparison_all_cpu_adstock_large_dataset.ipynb
+++ b/comparison_all_cpu_adstock_large_dataset.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# A Google Meridian PyMC-Marketing Comparison\n",
     "\n",
-    "## Start-up & Scale-up Datasets"
+    "## Enterprise Dataset"
    ]
   },
   {
@@ -125,7 +125,7 @@
    },
    "outputs": [],
    "source": [
-    "dataset_names= [\"small_business\", \"medium_business\"]"
+    "dataset_names= [\"large_business\"]"
    ]
   },
   {
@@ -639,7 +639,7 @@
     "            print(f\"  Posterior predictive took {pymc_pp_time:.2f} seconds.\")\n",
     "\n",
     "            total_time = pymc_sample_time + pymc_pp_time\n",
-    "            es = az.ess(mmm_model.idata,var_names = [var.name for var in mmm_model.model.free_RVs])\n",
+    "            es = az.ess(mmm_model.idata, var_names = [var.name for var in mmm_model.model.free_RVs])\n",
     "            min_ess = min([es[val].min() for val in es.data_vars])\n",
     "            es = np.quantile(np.concat([es[var].values.flatten() for var in es.data_vars]),[0.1,0.5,0.9])\n",
     "\n",
